[package]
name = "moonpool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "moonpool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
devnet = ["raydium-cpmm-cpi/devnet"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
mpl-token-metadata = "5.1.0"
anchor-spl = { version = "=0.30.1", features = ["memo"] }
solana-program = "1.18.11"
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi", branch = "anchor-0.30.1" }